--- a/package.xml
+++ b/package.xml
@@ -10,9 +10,17 @@ o Country
 o UK counties
 o US States
 o FR Departements
+o NO Fylke
+o NO Kommuner
 	</description>
 
 	<maintainers>
+		<maintainer>
+			<user>derick</user>
+			<name>Derick Rethans</name>
+			<email>derick@php.net</email>
+			<role>lead</role>
+		</maintainer>
 		<maintainer>
 			<user>richard</user>
 			<name>Richard Heyes</name>
@@ -23,10 +31,10 @@ o FR Departements
 
 	<release>
 		<license>BSD</license>
-		<version>1.1</version>
-		<date>2003-01-18</date>
+		<version>1.2</version>
+		<date>2003-04-05</date>
 		<state>stable</state>
-		<notes>Updated package name, structure, and added French departements</notes>
+		<notes>Corrected US states and added Norwegian Fylke and Kommuner</notes>
 
 		<filelist>
 			<dir name="/" baseinstalldir="HTML">
@@ -35,6 +43,8 @@ o FR Departements
 						<file role="php" name="Country.php" />
 						<file role="php" name="UKCounty.php" />
 						<file role="php" name="USState.php" />
+						<file role="php" name="NOFylke.php" />
+						<file role="php" name="NOKommune.php" />
 						<file role="php" name="FRDepartements.php" />
 		
 						<dir name="examples">
@@ -55,6 +65,13 @@ o FR Departements
 	</release>
 	
 	<changelog>
+		<release>
+			<license>BSD</license>
+			<version>1.1</version>
+			<date>2003-01-18</date>
+			<state>stable</state>
+			<notes>Updated package name, structure, and added French departements</notes>
+		</release>
 		<release>
 			<license>BSD</license>
 			<version>1.0</version>
