Fixing request #6136: ptBRState - new file
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Select_Common/trunk@225007 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -40,6 +40,7 @@ o NO Kommuner
 			<dir name="/" baseinstalldir="HTML">
 				<dir name="Select">
 					<dir name="Common">
+						<file role="php" name="BRState.php" />
 						<file role="php" name="Country.php" />
 						<file role="php" name="UKCounty.php" />
 						<file role="php" name="USState.php" />
