--- a/package.xml
+++ b/package.xml
@@ -1,84 +1,130 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-
-<package>
-	<name>HTML_Select_Common</name>
-	<summary>Some small classes to handle common &lt;select&gt; lists</summary>
-	<description>
-Provides &lt;select&gt;lists for:
+<?xml version="1.0" encoding="UTF-8"?>
+<package packagerversion="1.9.0" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
+ <name>HTML_Select_Common</name>
+ <channel>pear.php.net</channel>
+ <summary>Some small classes to handle common &lt;select&gt; lists</summary>
+ <description>Provides &lt;select&gt;lists for:
 o Country
 o UK counties
 o US States
 o FR Departements
 o NO Fylke
 o NO Kommuner
-	</description>
-
-	<maintainers>
-		<maintainer>
-			<user>derick</user>
-			<name>Derick Rethans</name>
-			<email>derick@php.net</email>
-			<role>lead</role>
-		</maintainer>
-		<maintainer>
-			<user>richard</user>
-			<name>Richard Heyes</name>
-			<email>richard@php.net</email>
-			<role>lead</role>
-		</maintainer>
-	</maintainers>
-
-	<release>
-		<license>BSD</license>
-		<version>1.2</version>
-		<date>2003-04-05</date>
-		<state>stable</state>
-		<notes>Corrected US states and added Norwegian Fylke and Kommuner</notes>
-
-		<filelist>
-			<dir name="/" baseinstalldir="HTML">
-				<dir name="Select">
-					<dir name="Common">
-						<file role="php" name="BRState.php" />
-						<file role="php" name="Country.php" />
-						<file role="php" name="UKCounty.php" />
-						<file role="php" name="USState.php" />
-						<file role="php" name="NOFylke.php" />
-						<file role="php" name="NOKommune.php" />
-						<file role="php" name="FRDepartements.php" />
-		
-						<dir name="examples">
-							<file role="php" name="Country.php" />
-							<file role="php" name="UKCounty.php" />
-							<file role="php" name="USState.php" />
-							<file role="php" name="FRDepartements.php" />
-						</dir>
-					</dir>
-				</dir>
-			</dir>
-		</filelist>
-
-		<deps>
-			<dep type="pkg" rel="ge" version="0.8">I18N</dep>
-		</deps>
-
-	</release>
-	
-	<changelog>
-		<release>
-			<license>BSD</license>
-			<version>1.1</version>
-			<date>2003-01-18</date>
-			<state>stable</state>
-			<notes>Updated package name, structure, and added French departements</notes>
-		</release>
-		<release>
-			<license>BSD</license>
-			<version>1.0</version>
-			<date>2002-10-25</date>
-			<state>stable</state>
-			<notes>Initial release</notes>
-		</release>
-	</changelog>
+o ptBR
+</description>
+ <lead>
+  <name>Derick Rethans</name>
+  <user>derick</user>
+  <email>derick@php.net</email>
+  <active>no</active>
+ </lead>
+ <lead>
+  <name>Richard Heyes</name>
+  <user>richard</user>
+  <email>richard@php.net</email>
+  <active>no</active>
+ </lead>
+ <date>2010-10-04</date>
+ <time>22:54:30</time>
+ <version>
+  <release>1.2</release>
+  <api>1.2</api>
+ </version>
+ <stability>
+  <release>stable</release>
+  <api>stable</api>
+ </stability>
+ <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD</license>
+ <notes>
+QA release
+Bug #14971 PHPCS tabs vs spaces kguest
+Request #6163  	[Feature]-ptBRState - new file  	cweiske
+Bug #5050 State abbreviations wrong  	derick
+Corrected US states and added Norwegian Fylke and Kommuner
+ </notes>
+ <contents>
+  <dir baseinstalldir="/" name="/">
+   <file baseinstalldir="/" md5sum="1ec7038bdab13ed4cc633a831aed8da0" name="HTML/Select/Common/BRState.php" role="php" />
+   <file baseinstalldir="/" md5sum="7c258e081875ed6d6a72b5e67c779a14" name="HTML/Select/Common/Country.php" role="php" />
+   <file baseinstalldir="/" md5sum="bb90cafa0df9fa6fa7c6d77016bbc2d0" name="HTML/Select/Common/FRDepartements.php" role="php" />
+   <file baseinstalldir="/" md5sum="b3ddfdd571de085aeefa97cbb4d0789b" name="HTML/Select/Common/NOFylke.php" role="php" />
+   <file baseinstalldir="/" md5sum="b06ece02e430cd3049f1c9f5934986ce" name="HTML/Select/Common/NOKommune.php" role="php" />
+   <file baseinstalldir="/" md5sum="69c8d324dc6ae8c7bee47ed327d7ed76" name="HTML/Select/Common/UKCounty.php" role="php" />
+   <file baseinstalldir="/" md5sum="7d11405566222ec11ddd753495893004" name="HTML/Select/Common/USState.php" role="php" />
+   <file baseinstalldir="/" md5sum="9a95952583688412dae84a5f58de0082" name="HTML/Select/Common/examples/Country.php" role="php" />
+   <file baseinstalldir="/" md5sum="91ad5870004e293d9b9c5043ff476aae" name="HTML/Select/Common/examples/FRDepartements.php" role="php" />
+   <file baseinstalldir="/" md5sum="7ebcdb03977641df6b218b39ea3ae219" name="HTML/Select/Common/examples/UKCounty.php" role="php" />
+   <file baseinstalldir="/" md5sum="c41e207463e4e050f4c6ceafc2b160e4" name="HTML/Select/Common/examples/USState.php" role="php" />
+   <file baseinstalldir="/" md5sum="9a95952583688412dae84a5f58de0082" name="HTML/Select/examples/Country.php" role="php" />
+   <file baseinstalldir="/" md5sum="7ebcdb03977641df6b218b39ea3ae219" name="HTML/Select/examples/UKCounty.php" role="php" />
+   <file baseinstalldir="/" md5sum="c41e207463e4e050f4c6ceafc2b160e4" name="HTML/Select/examples/USState.php" role="php" />
+  </dir>
+ </contents>
+ <dependencies>
+  <required>
+   <php>
+    <min>4.0.0</min>
+   </php>
+   <pearinstaller>
+    <min>1.9.1</min>
+   </pearinstaller>
+   <package>
+    <name>I18N</name>
+    <channel>pear.php.net</channel>
+    <min>0.8</min>
+   </package>
+  </required>
+ </dependencies>
+ <phprelease />
+ <changelog>
+  <release>
+   <version>
+    <release>1.0</release>
+    <api>1.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2002-10-25</date>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD</license>
+   <notes>
+Initial release
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.1</release>
+    <api>1.1</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2003-01-18</date>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD</license>
+   <notes>
+Updated package name, structure, and added French departements
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.2</release>
+    <api>1.2</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2010-10-04</date>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD</license>
+   <notes>
+QA release
+Bug #14971 PHPCS tabs vs spaces kguest
+Request #6163   [Feature]-ptBRState - new file          cweiske
+Bug #5050 State abbreviations wrong     derick
+Corrected US states and added Norwegian Fylke and Kommuner
+   </notes>
+  </release>
+ </changelog>
 </package>
